<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Princess Color</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_art_selector">ArtSelector</string>
    <string name="not_tablet">Not a tablet.</string>
    <string name="previous_scene">Click to show previous scene.</string>
    <string name="title">Princess Coloring Book</string>
    <string name="scene">Click to color scene.</string>
    <string name="tablet_required">TABLET REQUIRED</string>
    <string name="next_scene">Clic to show next scene.</string>
    <string name="copyright">© 2012 GPA Software, Inc. All Rights Reserved.</string>

</resources>